traefik/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress
    name: traefik-ingress
spec:
  relector:
    matchLabels:
      k8s-app: traefik-ingress
      name: traefik-ingress
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress
        name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: harbor.knd.com/public/traefik:v1.7.2
        name: traefik-ingress
        ports:
        - name: controller
          containerPort: 80
          hostPort: 81
        - name: admin-web
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --api.dashboard=true
        - --kubernetes
        - --logLevel=INFO
        - --insecure=true
        - --dashboard=true
        - --providers.kubernetesingress
        - --providers.kubernetescrd
        - --providers.kubernetescrd.endpoint=https://192.168.1.29:7443
        - --providers.kubernetesingress.endpoint=https://192.168.1.29:7443
        - --accessLog
        - --accessLog.filepath=/var/log/traefik_access.log
        - --traefiklog
        - --traefiklog.filepath=/var/log/traefik.log
        - --metrics.prometheus
